[gd_scene load_steps=2 format=1]

[ext_resource path="res://Scenes/UI/Settings.gd" type="Script" id=1]

[node name="Settings" type="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 110.0
margin/right = 1040.0
margin/bottom = 610.0
popup/exclusive = false
window/title = "Configuration"
script/script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 250.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 122.0
margin/top = 0.0
margin/right = 278.0
margin/bottom = 250.0
alignment = 2

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 156.0
margin/bottom = 67.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Debug mode"
flat = false
align = 0

[node name="CheckBox2" type="CheckBox" parent="HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 71.0
margin/right = 156.0
margin/bottom = 94.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Chill mode"
flat = false
align = 0

[node name="CheckBox3" type="CheckBox" parent="HBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 98.0
margin/right = 156.0
margin/bottom = 121.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Autospawn enemies"
flat = false
align = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 125 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 125.0
margin/right = 156.0
margin/bottom = 250.0
alignment = 2

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 105.0
margin/right = 156.0
margin/bottom = 125.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Close"
flat = false

[connection signal="toggled" from="HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]

[connection signal="toggled" from="HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_CheckBox2_toggled"]

[connection signal="toggled" from="HBoxContainer/VBoxContainer/CheckBox3" to="." method="_on_CheckBox3_toggled"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]


